--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "private": false,
     "dependencies": {
         "concurrently": "^5.2.0",
-        "per-env": "^1.0.2"
+        "per-env": "^1.0.2",
+        "react-router-dom": "^5.2.0"
     }
 }
