--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "elliptic": "^6.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "websocket-extensions": "^0.1.4",
     "yargs-parser": "^18.1.3"
   },
