--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "repository": "https://github.com/mdothman/TheChefsPick.git",
     "private": false,
     "dependencies": {
+        "axios": "^0.20.0",
         "concurrently": "^5.2.0",
         "per-env": "^1.0.2",
         "react-router-dom": "^5.2.0"
