--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
         "client": "cd client && npm run start",
         "seed": "node scripts/seedDB.js",
         "install": "cd client && npm install",
-        "build": "webpack --env.ENVIRONMENT=production --config webpack.config.build.js",
-        "heroku-postbuild": "npm run build",
-        "dev": "webpack --env.ENVIRONMENT=development --config webpack.config.dev.js"
+        "build": "cd client && npm run build",
+        "heroku-postbuild": "npm run build"
     },
     "repository": "https://github.com/mdothman/TheChefsPick.git",
     "private": false,
@@ -23,9 +22,11 @@
         "concurrently": "^5.2.0",
         "dotenv": "^8.2.0",
         "per-env": "^1.0.2",
-        "react-router-dom": "^5.2.0"
+        "react-router-dom": "^5.2.0",
+        "if-env": "^1.0.4"
     },
     "devDependencies": {
-        "webpack-cli": "^3.3.12"
+        "nodemon": "^2.0.4",
+        "concurrently": "^5.3.0"
     }
 }
