--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "dotenv": "^8.2.0",
         "per-env": "^1.0.2",
         "react-router-dom": "^5.2.0",
+        "mongoose": "^5.3.16",
         "if-env": "^1.0.4"
     },
     "devDependencies": {
