--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "private": false,
     "dependencies": {
         "axios": "^0.20.0",
+        "express":"4.17.1",
         "concurrently": "^5.2.0",
         "dotenv": "^8.2.0",
         "per-env": "^1.0.2",
