--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "thechefspick",
     "version": "1.0.0",
     "description": "You are the chef, now take your pick!",
-    "main": "index.js",
+    "main": "server.js",
     "author": "BEELZ <othmanmuhidean@gmail.com>",
     "license": "ISC",
     "scripts": {
@@ -19,10 +19,9 @@
     "private": false,
     "dependencies": {
         "axios": "^0.20.0",
-        "express":"4.17.1",
+        "express": "4.17.1",
         "concurrently": "^5.2.0",
         "dotenv": "^8.2.0",
-        "per-env": "^1.0.2",
         "react-router-dom": "^5.2.0",
         "mongoose": "^5.3.16",
         "if-env": "^1.0.4"
