--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "repository": "https://github.com/mdothman/TheChefsPick.git",
     "private": false,
     "dependencies": {
+        "@material-ui/lab": "^4.0.0-alpha.56",
         "axios": "^0.20.0",
-        "express": "4.17.1",
         "concurrently": "^5.2.0",
         "dotenv": "^8.2.0",
-        "react-router-dom": "^5.2.0",
+        "express": "4.17.1",
+        "if-env": "^1.0.4",
         "mongoose": "^5.3.16",
-        "if-env": "^1.0.4"
+        "react-router-dom": "^5.2.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.4",
