--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "install": "cd client && npm install",
         "build": "cd client && npm run build",
         "heroku-postbuild": "npm run build",
-        "lucy":"node git.js"
+        "lucy":"node gitAdd.js"
 
     },
     "repository": "https://github.com/mdothman/TheChefsPick.git",
