--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
         "client": "cd client && npm run start",
         "seed": "node scripts/seedDB.js",
         "install": "cd client && npm install",
-        "prebuild": "npm major patch",
+        "prebuild": "npm version patch",
         "build": "cd client && npm run build",
         "heroku-postbuild": "npm run build",
-        "preadd": "npm version patch",
         "add": "node add.js"
     },
     "repository": "https://github.com/mdothman/TheChefsPick.git",
