--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
         "express": "4.17.1",
         "if-env": "^1.0.4",
         "mongoose": "^5.3.16",
-        "react-router-dom": "^5.2.0"
+        "react-promise-tracker": "^2.1.0",
+        "react-router-dom": "^5.2.0",
+        "react-spinners": "^0.9.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.4",
